--- a/public/index.html
+++ b/public/index.html
@@ -178,7 +178,14 @@
 
     const store = createStore(app);
     store.subscribe(() => {
-      console.log("The new state is: ", store.getState());
+      // console.log("The new state is: ", store.getState());
+      const { goals, todos } = store.getState();
+
+      document.getElementById('goals').innerHTML = ''
+      document.getElementById('todos').innerHTML = ''
+
+      goals.forEach(addGoalToDOM)
+      todos.forEach(addTodoToDOM)
     });
 
     // store.dispatch(
@@ -231,6 +238,7 @@
 
     // unsubscribe();
 
+    // DOM code
     function addTodo() {
       const input = document.getElementById('todo');
       const name = input.value;
@@ -254,11 +262,38 @@
       }))
     }
 
-    document.getElementById('todoBtn')
-      .addEventListener('click', addTodo);
+    document.getElementById('todoBtn').addEventListener('click', addTodo);
 
-    document.getElementById('goalBtn')
-      .addEventListener('click', addGoal);
+    document.getElementById('goalBtn').addEventListener('click', addGoal);
+
+    function addTodoToDOM(todo) {
+      const node = document.createElement('li')
+      const text = document.createTextNode(todo.name)
+      node.appendChild(text)
+      node.style.textDecoration = todo.complete ? 'line-through' : 'none'
+      node.addEventListener('click', () => {
+        store.dispatch(toggleTodoAction(todo.id))
+      })
+
+      document.getElementById('todos').appendChild(node)
+    }
+
+    function addGoalToDOM(goal) {
+      const node = document.createElement('li')
+      const text = document.createTextNode(goal.name)
+      node.appendChild(text)
+      goal.complete ? node.setAttribute('style', 'text-decoration: line-through; color: blue') : 'none'
+
+      node.addEventListener('click', () => {
+        store.dispatch(toggleGoalAction(goal.id))
+      })
+
+
+      document.getElementById('goals').appendChild(node)
+    }
+
+
+
   </script>
 </body>
 
