--- a/public/index.html
+++ b/public/index.html
@@ -266,10 +266,23 @@
 
     document.getElementById('goalBtn').addEventListener('click', addGoal);
 
+    function createRemoveButton(onClick) {
+      const removeBtn = document.createElement('button');
+      removeBtn.innerHTML = "X";
+      removeBtn.addEventListener('click', onClick);
+      return removeBtn;
+    }
+
     function addTodoToDOM(todo) {
       const node = document.createElement('li')
       const text = document.createTextNode(todo.name)
+
+      const removeBtn = createRemoveButton(() => {
+        store.dispatch(removeTodoAction(todo.id))
+      })
+
       node.appendChild(text)
+      node.appendChild(removeBtn)
       node.style.textDecoration = todo.complete ? 'line-through' : 'none'
       node.addEventListener('click', () => {
         store.dispatch(toggleTodoAction(todo.id))
@@ -281,7 +294,13 @@
     function addGoalToDOM(goal) {
       const node = document.createElement('li')
       const text = document.createTextNode(goal.name)
+
+      const removeBtn = createRemoveButton(() => {
+        store.dispatch(removeGoalAction(goal.id))
+      })
+
       node.appendChild(text)
+      node.appendChild(removeBtn)
       goal.complete ? node.setAttribute('style', 'text-decoration: line-through; color: blue') : 'none'
 
       node.addEventListener('click', () => {
