--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>React Redux Todos Goals</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/redux/4.1.2/redux.min.js"></script>
+
 </head>
 
 <body>
@@ -49,37 +51,37 @@
       return Math.random().toString(36).substring(2) + (new Date()).getTime().toString(36)
     }
 
-    // Library Code
-    function createStore(reducer) {
-      // The store should have four parts
-      // 1. The state
-      // 2. Get the state
-      // 3. Listen to changes on the state
-      // 4. Update the state
+    // // Library Code
+    // function createStore(reducer) {
+    //   // The store should have four parts
+    //   // 1. The state
+    //   // 2. Get the state
+    //   // 3. Listen to changes on the state
+    //   // 4. Update the state
 
-      let state;
-      let listeners = [];
+    //   let state;
+    //   let listeners = [];
 
-      const getState = () => state;
+    //   const getState = () => state;
 
-      const subscribe = (listener) => {
-        listeners.push(listener);
-        return () => {
-          listeners = listeners.filter((l) => l !== listener);
-        };
-      };
+    //   const subscribe = (listener) => {
+    //     listeners.push(listener);
+    //     return () => {
+    //       listeners = listeners.filter((l) => l !== listener);
+    //     };
+    //   };
 
-      const dispatch = (action) => {
-        state = reducer(state, action);
-        listeners.forEach((listener) => listener());
-      };
+    //   const dispatch = (action) => {
+    //     state = reducer(state, action);
+    //     listeners.forEach((listener) => listener());
+    //   };
 
-      return {
-        getState,
-        subscribe,
-        dispatch,
-      };
-    }
+    //   return {
+    //     getState,
+    //     subscribe,
+    //     dispatch,
+    //   };
+    // }
 
     // App Code
     const ADD_TODO = "ADD_TODO";
@@ -168,15 +170,19 @@
       }
     }
 
-    // root reducer -> combine reducers
-    function app(state = {}, action) {
-      return {
-        todos: todos(state.todos, action),
-        goals: goals(state.goals, action),
-      };
-    }
+    // // root reducer -> combine reducers
+    // function app(state = {}, action) {
+    //   return {
+    //     todos: todos(state.todos, action),
+    //     goals: goals(state.goals, action),
+    //   };
+    // }
 
-    const store = createStore(app);
+    const store = Redux.createStore(Redux.combineReducers({
+      todos,
+      goals
+    }));
+
     store.subscribe(() => {
       // console.log("The new state is: ", store.getState());
       const { goals, todos } = store.getState();
