--- a/public/index.html
+++ b/public/index.html
@@ -178,6 +178,24 @@
     //   };
     // }
 
+    function checkAndDispatch(store, action) {
+      if (
+        action.type === ADD_TODO &&
+        action.todo.name.toLowerCase().includes('bitcoin')
+      ) {
+        return alert('Nope. That"s a bad idea.')
+      }
+
+      if (
+        action.type === ADD_GOAL &&
+        action.goal.name.toLowerCase().includes('bitcoin')
+      ) {
+        return alert('Nope. That"s a bad idea.')
+      }
+
+      return store.dispatch(action)
+    }
+
     const store = Redux.createStore(Redux.combineReducers({
       todos,
       goals
@@ -250,7 +268,7 @@
       const name = input.value;
       input.value = '';
 
-      store.dispatch(addTodoAction({
+      checkAndDispatch(store, addTodoAction({
         name,
         complete: false,
         id: generateId()
@@ -262,7 +280,7 @@
       const name = input.value;
       input.value = ''
 
-      store.dispatch(addGoalAction({
+      checkAndDispatch(store, addGoalAction({
         id: generateId(),
         name
       }))
@@ -284,14 +302,14 @@
       const text = document.createTextNode(todo.name)
 
       const removeBtn = createRemoveButton(() => {
-        store.dispatch(removeTodoAction(todo.id))
+        checkAndDispatch(store, removeTodoAction(todo.id))
       })
 
       node.appendChild(text)
       node.appendChild(removeBtn)
       node.style.textDecoration = todo.complete ? 'line-through' : 'none'
       node.addEventListener('click', () => {
-        store.dispatch(toggleTodoAction(todo.id))
+        checkAndDispatch(store, toggleTodoAction(todo.id))
       })
 
       document.getElementById('todos').appendChild(node)
@@ -302,7 +320,7 @@
       const text = document.createTextNode(goal.name)
 
       const removeBtn = createRemoveButton(() => {
-        store.dispatch(removeGoalAction(goal.id))
+        checkAndDispatch(store, removeGoalAction(goal.id))
       })
 
       node.appendChild(text)
@@ -310,7 +328,7 @@
       goal.complete ? node.setAttribute('style', 'text-decoration: line-through; color: blue') : 'none'
 
       node.addEventListener('click', () => {
-        store.dispatch(toggleGoalAction(goal.id))
+        checkAndDispatch(store, toggleGoalAction(goal.id))
       })
 
 
