Redux middleware added

--- a/public/index.html
+++ b/public/index.html
@@ -178,7 +178,24 @@
     //   };
     // }
 
-    function checkAndDispatch(store, action) {
+    // function store.dispatch(action) {
+    //   if (
+    //     action.type === ADD_TODO &&
+    //     action.todo.name.toLowerCase().includes('bitcoin')
+    //   ) {
+    //     return alert('Nope. That"s a bad idea.')
+    //   }
+
+    //   if (
+    //     action.type === ADD_GOAL &&
+    //     action.goal.name.toLowerCase().includes('bitcoin')
+    //   ) {
+    //     return alert('Nope. That"s a bad idea.')
+    //   }
+
+    //   return store.dispatch(action)
+    // }
+    const checker = store => next => action => {
       if (
         action.type === ADD_TODO &&
         action.todo.name.toLowerCase().includes('bitcoin')
@@ -193,13 +210,15 @@
         return alert('Nope. That"s a bad idea.')
       }
 
-      return store.dispatch(action)
+      return next(action)
     }
+
+
 
     const store = Redux.createStore(Redux.combineReducers({
       todos,
       goals
-    }));
+    }), Redux.applyMiddleware(checker));
 
     store.subscribe(() => {
       // console.log("The new state is: ", store.getState());
@@ -268,7 +287,7 @@
       const name = input.value;
       input.value = '';
 
-      checkAndDispatch(store, addTodoAction({
+      store.dispatch(addTodoAction({
         name,
         complete: false,
         id: generateId()
@@ -280,7 +299,7 @@
       const name = input.value;
       input.value = ''
 
-      checkAndDispatch(store, addGoalAction({
+      store.dispatch(addGoalAction({
         id: generateId(),
         name
       }))
@@ -302,14 +321,14 @@
       const text = document.createTextNode(todo.name)
 
       const removeBtn = createRemoveButton(() => {
-        checkAndDispatch(store, removeTodoAction(todo.id))
+        store.dispatch(removeTodoAction(todo.id))
       })
 
       node.appendChild(text)
       node.appendChild(removeBtn)
       node.style.textDecoration = todo.complete ? 'line-through' : 'none'
       node.addEventListener('click', () => {
-        checkAndDispatch(store, toggleTodoAction(todo.id))
+        store.dispatch(toggleTodoAction(todo.id))
       })
 
       document.getElementById('todos').appendChild(node)
@@ -320,7 +339,7 @@
       const text = document.createTextNode(goal.name)
 
       const removeBtn = createRemoveButton(() => {
-        checkAndDispatch(store, removeGoalAction(goal.id))
+        store.dispatch(removeGoalAction(goal.id))
       })
 
       node.appendChild(text)
@@ -328,7 +347,7 @@
       goal.complete ? node.setAttribute('style', 'text-decoration: line-through; color: blue') : 'none'
 
       node.addEventListener('click', () => {
-        checkAndDispatch(store, toggleGoalAction(goal.id))
+        store.dispatch(toggleGoalAction(goal.id))
       })
 
 
