--- a/public/index.html
+++ b/public/index.html
@@ -401,10 +401,25 @@
       )
     }
 
-    const Goals = () => {
+    const Goals = (props) => {
+      const inputRef = React.useRef();
+      const addItem = (event) => {
+        event.preventDefault();
+        const name = inputRef.current.value;
+        inputRef.current.value = '';
+
+        props.store.dispatch(addGoalAction({
+          name,
+          complete: false,
+          id: generateId()
+        }))
+      }
+
       return (
         <div>
-          GOALS
+          <h1>Goals</h1>
+          <input type="text" placeholder='Add Goal' ref={inputRef} />
+          <button onClick={addItem}>Add Goal</button>
           <List />
         </div>
       )
