--- a/public/index.html
+++ b/public/index.html
@@ -373,7 +373,13 @@
     const List = props => {
       return (
         <ul>
-          <li>LIST</li>
+          {
+            props.items && props.items.map(item => (
+              <li key={item.id}>
+                <span>{item.name}</span>
+                <button onClick={() => props.remove(item)}>X</button>
+              </li>))
+          }
         </ul>
       )
     }
@@ -391,12 +397,17 @@
           id: generateId()
         }))
       }
+
+      const removeItem = (todo) => {
+        props.store.dispatch(removeTodoAction(todo.id));
+      }
+
       return (
         <div>
           <h1>Todo List</h1>
           <input type='text' placeholder='Add Todo' ref={inputRef} />
           <button onClick={addItem}>Add Todo</button>
-          <List />
+          <List remove={removeItem} items={props.todos} />
         </div>
       )
     }
@@ -415,12 +426,16 @@
         }))
       }
 
+      const removeItem = goal => {
+        props.store.dispatch(removeGoalAction(goal.id));
+      }
+
       return (
         <div>
           <h1>Goals</h1>
           <input type="text" placeholder='Add Goal' ref={inputRef} />
           <button onClick={addItem}>Add Goal</button>
-          <List />
+          <List remove={removeItem} items={props.goals} />
         </div>
       )
     }
