--- a/public/index.html
+++ b/public/index.html
@@ -269,6 +269,11 @@
 
       const toggleItem = id => {
         props.store.dispatch(toggleTodoAction(id));
+
+        return API.saveTodoToggle(id).catch(() => {
+          props.store.dispatch(toggleTodoAction(id));
+          alert('An error occurred. Try again.')
+        })
       }
 
       return (
