--- a/public/index.html
+++ b/public/index.html
@@ -248,14 +248,14 @@
       const inputRef = React.useRef()
       const addItem = (event) => {
         event.preventDefault();
-        const name = inputRef.current.value;
-        inputRef.current.value = '';
 
-        props.store.dispatch(addTodoAction({
-          name,
-          complete: false,
-          id: generateId()
-        }))
+        return API.saveTodo(inputRef.current.value)
+          .then((todo) => {
+            props.store.dispatch(addTodoAction(todo))
+            inputRef.current.value = ''
+          }).catch(() => {
+            alert("There was an error. Try again.")
+          })
       }
 
       const removeItem = (todo) => {
@@ -290,14 +290,14 @@
       const inputRef = React.useRef();
       const addItem = (event) => {
         event.preventDefault();
-        const name = inputRef.current.value;
-        inputRef.current.value = '';
 
-        props.store.dispatch(addGoalAction({
-          name,
-          complete: false,
-          id: generateId()
-        }))
+        return API.saveGoal(inputRef.current.value)
+          .then((goal) => {
+            props.store.dispatch(addGoalAction(goal))
+            inputRef.current.value = ''
+          }).catch(() => {
+            alert("There was an error. Try again.")
+          })
       }
 
       const removeItem = goal => {
