--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
   <script src="https://unpkg.com/react-dom@18.2.0/umd/react-dom.development.js"></script>
   <script src="https://unpkg.com/@babel/standalone@7.17.6/babel.min.js"></script>
   <script src="https://tylermcginnis.com/goals-todos-api/index.js"></script>
+  <script src="https://unpkg.com/redux-thunk@2.2.0/dist/redux-thunk.min.js"></script>
 </head>
 
 <body>
@@ -136,6 +137,17 @@
       }
     }
 
+    function handleDeleteTodo(todo) {
+      return (dispatch) => {
+        dispatch(removeTodoAction(todo.id));
+
+        return API.deleteTodo(todo.id).catch(() => {
+          props.store.dispatch(addTodoAction(todo));
+          alert('An error occurred. Try again.')
+        })
+      }
+    }
+
     // reducer function
     function todos(state = [], action) {
       switch (action.type) {
@@ -215,12 +227,21 @@
       return result;
     }
 
+    // // middleware
+    // const thunk = (store) => next => action => {
+    //   if (typeof action === 'function') {
+    //     return action(store.dispatch);
+    //   }
+
+    //   next(action);
+    // }
+
     // creating the store
     const store = Redux.createStore(Redux.combineReducers({
       todos,
       goals,
       loading,
-    }), Redux.applyMiddleware(checker, logger));
+    }), Redux.applyMiddleware(ReduxThunk.default, checker, logger));
 
 
   </script>
@@ -259,12 +280,7 @@
       }
 
       const removeItem = (todo) => {
-        props.store.dispatch(removeTodoAction(todo.id));
-
-        return API.deleteTodo(todo.id).catch(() => {
-          props.store.dispatch(addTodoAction(todo));
-          alert('An error occurred. Try again.')
-        })
+        props.store.dispatch(handleDeleteTodo(todo))
       }
 
       const toggleItem = id => {
