--- a/public/index.html
+++ b/public/index.html
@@ -142,7 +142,28 @@
         dispatch(removeTodoAction(todo.id));
 
         return API.deleteTodo(todo.id).catch(() => {
-          props.store.dispatch(addTodoAction(todo));
+          dispatch(addTodoAction(todo));
+          alert('An error occurred. Try again.')
+        })
+      }
+    }
+
+    function handleAddGoal(name, cb) {
+      return (dispatch) => {
+        return API.saveGoal(name).then((goal) => {
+          dispatch(addGoalAction(goal))
+        }).catch(() => {
+          alert('There was an error. Try again.')
+        })
+      }
+    }
+
+    function handleDeleteGoal(goal) {
+      return (dispatch) => {
+        dispatch(removeGoalAction(goal.id));
+
+        return API.deleteGoal(goal.id).catch(() => {
+          dispatch(addGoalAction(goal));
           alert('An error occurred. Try again.')
         })
       }
@@ -307,22 +328,14 @@
       const addItem = (event) => {
         event.preventDefault();
 
-        return API.saveGoal(inputRef.current.value)
-          .then((goal) => {
-            props.store.dispatch(addGoalAction(goal))
-            inputRef.current.value = ''
-          }).catch(() => {
-            alert("There was an error. Try again.")
-          })
+        props.store.dispatch(handleAddGoal(
+          inputRef.current.value,
+          () => (inputRef.current.value = '')
+        ))
       }
 
       const removeItem = goal => {
-        props.store.dispatch(removeGoalAction(goal.id));
-
-        return API.deleteGoal(goal.id).catch(() => {
-          props.store.dispatch(addGoalAction(goal));
-          alert('An error occurred. Try again.')
-        })
+        props.store.dispatch(handleDeleteGoal(goal))
       }
 
       return (
