--- a/public/index.html
+++ b/public/index.html
@@ -325,18 +325,18 @@
       const addItem = (event) => {
         event.preventDefault();
 
-        props.store.dispatch(handleAddTodo(
+        props.dispatch(handleAddTodo(
           inputRef.current.value,
           () => inputRef.current.value = ''
         ))
       }
 
       const removeItem = (todo) => {
-        props.store.dispatch(handleDeleteTodo(todo))
+        props.dispatch(handleDeleteTodo(todo))
       }
 
       const toggleItem = id => {
-        props.store.dispatch(handleToggleTodo(id))
+        props.dispatch(handleToggleTodo(id))
       }
 
       return (
@@ -349,23 +349,37 @@
       )
     }
 
+    const ConnectedTodos = () => {
+      return (
+        <Context.Consumer>
+          {(store) => {
+            const { todos } = store.getState();
+
+            return <Todos todos={todos} dispatch={store.dispatch} />
+          }
+          }
+        </Context.Consumer>
+      )
+    }
+
     const Goals = (props) => {
       const inputRef = React.useRef();
 
       const addItem = (event) => {
         event.preventDefault();
 
-        props.store.dispatch(handleAddGoal(
+        props.dispatch(handleAddGoal(
           inputRef.current.value,
           () => (inputRef.current.value = '')
         ))
       }
 
       const removeItem = goal => {
-        props.store.dispatch(handleDeleteGoal(goal))
+        props.dispatch(handleDeleteGoal(goal))
       }
 
       return (
+
         <div>
           <h1>Goals</h1>
           <input type="text" placeholder='Add Goal' ref={inputRef} />
@@ -375,18 +389,33 @@
       )
     }
 
+    const ConnectedGoals = () => {
+      return (
+        <Context.Consumer>
+          {
+            (store) => {
+              const { goals } = store.getState();
+
+              return <Goals goals={goals} dispatch={store.dispatch} />
+            }
+          }
+        </Context.Consumer>
+
+      )
+    }
+
     const App = (props) => {
       const [value, setValue] = React.useState(0)
 
       React.useEffect(() => {
-        props.store.dispatch(handleInitialData())
+        store.dispatch(handleInitialData())
 
-        props.store.subscribe(() => {
+        store.subscribe(() => {
           setValue(value => value + 1)
         })
       }, [])
 
-      const { goals, todos, loading } = props.store.getState();
+      const { loading } = store.getState();
 
       if (loading === true) {
         return <h3>Loading...</h3>
@@ -394,16 +423,40 @@
 
       return (
         <div>
-          <Todos todos={todos} store={props.store} />
-          <Goals goals={goals} store={props.store} />
+          <ConnectedTodos />
+          <ConnectedGoals />
         </div>
 
       )
     }
+
+    const ConnectedApp = () => {
+      return (
+        <Context.Consumer>
+          {
+            (store) => {
+              return <App store={store} />
+            }
+          }
+        </Context.Consumer>
+      )
+    }
+
+    const Context = React.createContext();
+    const Provider = props => {
+      return (
+        <Context.Provider value={props.store}>
+          {props.children}
+        </Context.Provider>
+      )
+    }
+
     const root = ReactDOM.createRoot(document.getElementById('app'))
     root.render(
       <React.StrictMode>
-        <App store={store} />
+        <Provider store={store}>
+          <ConnectedApp />
+        </Provider>
       </React.StrictMode>
     )
   </script>
