--- a/public/index.html
+++ b/public/index.html
@@ -380,10 +380,10 @@
       )
     }
 
-
     const ConnectedGoals = connect((state) => ({
       goals: state.goals,
     }))(Goals)
+
 
     const App = (props) => {
 
@@ -409,6 +409,53 @@
     }))(App);
 
     const Context = React.createContext();
+
+    function connect(mapStateToProps) {
+      return (Component) => {
+        const Receiver = (props) => {
+          const [value, setValue] = React.useState(0);
+
+          React.useEffect(() => {
+            let unmounted = false;
+            const { subscribe } = props.store;
+
+            const unsubscribe = subscribe(() => {
+              setValue(value => value + 1)
+            });
+
+            return () => {
+              unsubscribe();
+              unmounted = true;
+            }
+          }, []);
+
+          const { dispatch, getState } = props.store;
+          const state = getState();
+          const stateNeeded = mapStateToProps(state);
+
+          return <Component {...stateNeeded} dispatch={dispatch} />;
+        }
+
+        const ConnectedComponent = () => {
+          return (
+            <Context.Consumer>
+              {
+                (store) => <Receiver store={store} />
+
+              }
+            </Context.Consumer>
+          )
+        }
+
+        return ConnectedComponent;
+      }
+    }
+
+    // Changes to implement
+    // - Know when the store changes. Use store.subscribe
+    // - What state is needed. Use mapStateToProps
+    // - Get the store from Context
+
     const Provider = props => {
       return (
         <Context.Provider value={props.store}>
